--- a/publication.html
+++ b/publication.html
@@ -5,29 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zimo Li - Bio</title>
     <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
+        body, html {
+            height: 100%;
             margin: 0;
             padding: 0;
+            font-family: 'Times New Roman', Times, serif;
             background: #f5f6fa;
         }
-        header {
-            background: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 2rem 0 1rem 0;
+        .header-img {
+            width: 100vw;
+            height: 30vh;
+            object-fit: cover;
+            display: block;
+            position: relative;
+            z-index: 1;
+            /* Optional: fade out bottom */
+            mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
         }
-        .contact-info {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            margin-top: 1rem;
+        .footer-img {
+            width: 100vw;
+            height: 30vh;
+            object-fit: cover;
+            display: block;
+            position: relative;
+            z-index: 1;
+            /* Optional: fade in top */
+            mask-image: linear-gradient(to top, black 80%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to top, black 80%, transparent 100%);
         }
-        .contact-info a {
-            color: white;
-            text-decoration: none;
+        .container {
+            max-width: 900px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+            min-height: 40vh;
         }
-        /* Show menu on hover at left edge */
+        .item {
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.08);
+            margin-bottom: 2rem;
+            padding: 1.5rem 2rem;
+            font-size: 1.1rem;
+        }
+        /* Slide-out menu */
         .menu-hover-zone {
             position: fixed;
             left: 0;
@@ -36,7 +57,6 @@
             height: 100vh;
             z-index: 201;
         }
-        /* Slide-out menu */
         .side-menu {
             position: fixed;
             top: 0;
@@ -68,73 +88,6 @@
             text-decoration: none;
             font-size: 1.1rem;
         }
-        
-        /* Bio layout */
-        .bio-container {
-            display: flex;
-            max-width: 800px;
-            margin: 3rem auto 2rem auto;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.08);
-            overflow: hidden;
-        }
-        .bio-photo {
-            width: 220px;
-            height: 220px;
-            object-fit: cover;
-            margin: 2rem;
-            border-radius: 8px;
-            background: #eee;
-        }
-        .bio-text {
-            flex: 1;
-            padding: 2rem;
-            display: flex;
-            align-items: center;
-        }
-        footer {
-            margin-top: 3rem;
-            text-align: center;
-            background: #2c3e50;
-            color: white;
-            padding: 1rem 0 0 0;
-        }
-        .footer-img {
-            width: 100%;
-            max-width: 600px;
-            margin: 0 auto;
-            display: block;
-            border-radius: 0 0 8px 8px;
-        }
-        @media (max-width: 700px) {
-            .bio-container {
-                flex-direction: column;
-                align-items: center;
-            }
-            .bio-photo {
-                margin: 2rem auto 0 auto;
-            }
-            .bio-text {
-                padding: 1rem;
-            }
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 3rem auto 2rem auto;
-            padding: 0 1rem;
-        }
-
-        .item {
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.08);
-            margin-bottom: 2rem;
-            padding: 1.5rem 2rem;
-            font-size: 1.1rem;
-        }
-
     </style>
 </head>
 
@@ -150,23 +103,7 @@
         </ul>
     </nav>
     <header>
-        <h1>Zimo Li</h1>
-        <div class="contact-info">
-            <a href="mailto:zimo.li.20@ucl.ac.uk" title="Email">
-                <!-- Email icon SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24" style="vertical-align:middle;margin-right:6px;">
-                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.29 6.71c.39.36 1.02.36 1.41 0L20 10.01V20H4z"/>
-                </svg>
-                zimo.li.20@ucl.ac.uk
-            </a>
-            <a href="https://github.com/zimoli02" target="_blank" title="GitHub">
-                <!-- GitHub icon SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24" style="vertical-align:middle;margin-right:6px;">
-                    <path d="M12 2C6.48 2 2 6.58 2 12.26c0 4.5 2.87 8.32 6.84 9.67.5.09.68-.22.68-.48 0-.24-.01-.87-.01-1.7-2.78.61-3.37-1.36-3.37-1.36-.45-1.17-1.1-1.48-1.1-1.48-.9-.63.07-.62.07-.62 1 .07 1.53 1.05 1.53 1.05.89 1.56 2.34 1.11 2.91.85.09-.66.35-1.11.63-1.37-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.03 1.03-2.75-.1-.26-.45-1.3.1-2.7 0 0 .84-.28 2.75 1.05A9.38 9.38 0 0 1 12 6.84c.85.004 1.71.11 2.51.32 1.91-1.33 2.75-1.05 2.75-1.05.55 1.4.2 2.44.1 2.7.64.72 1.03 1.63 1.03 2.75 0 3.94-2.34 4.81-4.57 5.07.36.32.68.94.68 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.58.69.48A10.01 10.01 0 0 0 22 12.26C22 6.58 17.52 2 12 2z"/>
-                </svg>
-                github.com/zimoli02
-            </a>
-        </div>
+        <img src="Images/footer.png" alt="Header scene" class="header-img">
     </header>
     <main>
         <div class="container">
@@ -187,8 +124,8 @@
         </div>
     </main>
     <footer>
-        <img src="materials/footer.JPG" alt="Natural scene by Zimo Li" class="footer-img">
-        <p>&copy; 2025 Zimo Li</p>
+        <img src="Images/footer.png" alt="Qinling, Xi'an" class="footer-img">
+        <p>&copy; May 29th 2025</p>
     </footer>
 </body>
 </html>
