--- a/publication.html
+++ b/publication.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zimo Li - Bio</title>
+    <title>Zimo Li - Publication</title>
     <style>
         body, html {
             height: 100%;
@@ -98,12 +98,12 @@
             <li><a href="index.html">Bio</a></li>
             <li><a href="publication.html">Publication</a></li>
             <li><a href="project.html">Project</a></li>
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="https://drive.google.com/file/d/1o9m9PxVb2czNB3Pk2XQHj08ePnpiFkZu/view?usp=drive_link">CV</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
     </nav>
     <header>
-        <img src="Images/footer.png" alt="Header scene" class="header-img">
+        <img src="Images/footer.jpg" alt="Header scene" class="header-img">
     </header>
     <main>
         <div class="container">
@@ -124,7 +124,7 @@
         </div>
     </main>
     <footer>
-        <img src="Images/footer.png" alt="Qinling, Xi'an" class="footer-img">
+        <img src="Images/footer.jpg" alt="Qinling, Xi'an" class="footer-img">
         <p>&copy; May 29th 2025</p>
     </footer>
 </body>
