--- a/project.html
+++ b/project.html
@@ -20,19 +20,19 @@
             position: relative;
             z-index: 1;
             /* Optional: fade out bottom */
-            mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
-            -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
+            mask-image: linear-gradient(to bottom, black 0%, black 60%, rgba(0,0,0,0.8) 75%, rgba(0,0,0,0.4) 90%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to bottom, black 0%, black 60%, rgba(0,0,0,0.8) 75%, rgba(0,0,0,0.4) 90%, transparent 100%);
         }
         .footer-img {
             width: 100vw;
-            height: 30vh;
+            height: 70vh;
             object-fit: cover;
             display: block;
             position: relative;
             z-index: 1;
             /* Optional: fade in top */
-            mask-image: linear-gradient(to top, black 80%, transparent 100%);
-            -webkit-mask-image: linear-gradient(to top, black 80%, transparent 100%);
+            mask-image: linear-gradient(to top, black 0%, black 60%, rgba(0,0,0,0.8) 75%, rgba(0,0,0,0.4) 90%, transparent 100%);
+            -webkit-mask-image: linear-gradient(to top, black 0%, black 60%, rgba(0,0,0,0.8) 75%, rgba(0,0,0,0.4) 90%, transparent 100%);
         }
         .container {
             max-width: 900px;
@@ -103,7 +103,7 @@
         </ul>
     </nav>
     <header>
-        <img src="Images/footer.jpg" alt="Header scene" class="header-img">
+        <img src="Images/header.jpg" alt="Header scene" class="header-img">
     </header>
     <main>
         <div class="container">
