--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             display: flex;
             align-items: center;
             gap: 1rem;
-            padding-left: 126px; /* Align with name */
         }
         .contact-link {
             display: flex;
@@ -103,7 +102,7 @@
             bottom: 20%;
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
+            justify-content: space-between;
             width: 15%;
         }
         .menu-btn {
@@ -184,7 +183,7 @@
         
         <div class="bio-section">
             <div class="bio-header">
-                <img src="Images/bio.JPG" alt="Zimo Li" class="bio-headshot">
+                <img src="Images/bio.jpeg" alt="Zimo Li" class="bio-headshot">
                 <div class="bio-name-section">
                     <div class="bio-name">Zimo Li</div>
                     <div class="contact-info">
