--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
         footer {
             position: relative;
             width: 100%;
-            height: auto;
+            height: 70vh;
         }
         .footer-img {
             width: 100%;
@@ -52,7 +52,7 @@
             font-family: 'Times New Roman', 'SimSun', '宋体', serif; /* Added Chinese fonts */
         }
         .footer-location {
-            font-size: 1.2rem;
+            font-size: 1rem;
             margin-bottom: 0.5rem;
             font-style: italic;
         }
@@ -169,7 +169,7 @@
         </div>
     </main>
     <footer>
-        <img src="Images/footer.jpg" alt="Qinling, Xi'an" class="footer-img">
+        <img src="Images/footer.jpg" class="footer-img">
             <div class="footer-text">
             <div class="footer-location">"云横秦岭家何在" （唐）韩愈</div>
             <p class="footer-copyright">&copy; May 29th 2025</p>
