--- a/publication.html
+++ b/publication.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zimo Li - Publication</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <style>
         body, html {
             height: 100%;
@@ -114,6 +118,36 @@
             text-decoration: none;
             font-size: 1.1rem;
         }
+
+        .pdf-link {
+            color: #3498db;
+            text-decoration: none;
+            margin-left: 0.5rem;
+        }
+
+        .pdf-link:hover {
+            text-decoration: underline;
+        }
+
+        .code-link {
+            color: #2ecc71;  /* Different color from PDF links */
+            text-decoration: none;
+            margin-left: 0.5rem;
+        }
+
+        .code-link:hover {
+            text-decoration: underline;
+        }
+
+        .people-link {
+            color: #0317cd;  /* Different color from PDF links */
+            text-decoration: none;
+            margin-left: 0.5rem;
+        }
+
+        .people-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -121,7 +155,7 @@
     <div class="menu-hover-zone"></div>
     <nav class="side-menu">
         <ul>
-            <li><a href="index.html">Bio</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="publication.html">Publication</a></li>
             <li><a href="project.html">Project</a></li>
             <li><a href="https://drive.google.com/file/d/1o9m9PxVb2czNB3Pk2XQHj08ePnpiFkZu/view?usp=drive_link">CV</a></li>
@@ -137,13 +171,13 @@
         <section id="publications">
             <h2>Publications and Posters</h2>
             <div class="item">
-                <p>Bhagat, J., Campagner, D., Lopes, G., Calcaterra, L.,Almeida, A., Lo, C., Nguyen, T., Pouget, A., Ryan, T., Marin, M., Ahn, J., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Rapela, J., Reggiani, J., SWC Foraging Working Group. Aeon: an open -source platform for testing normative models of natural behaviours and their neural implementations. (2025) Computational and Systems Neuroscience (COSYNE), March 27th, Montreal, QC, Canada.</p>
+                <p>Bhagat, J., Campagner, D., Lopes, G., Calcaterra, L.,Almeida, A., Lo, C., Nguyen, T., Pouget, A., Ryan, T., Marin, M., Ahn, J., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Rapela, J., Reggiani, J., SWC Foraging Working Group. Aeon: an open -source platform for testing normative models of natural behaviours and their neural implementations. (2025) <em>Computational and Systems Neuroscience (COSYNE)</em>, March 27th, Montreal, QC, Canada.</p>
             </div>
             <div class="item">
-                <p>Campagner, D., Bhagat, J., Lopes, G., Calcaterra, L., Ahn, J., Almeida, A., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Lo, C., Nguyen, T., Pouget, A., Rapela, J., Reggiani, J., Ryan, T., SWC Foraging Working Group. Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales. (2024) Society for Neuroscience, October 5th, Chicago, U.S..</p>
+                <p>Campagner, D., Bhagat, J., Lopes, G., Calcaterra, L., Ahn, J., Almeida, A., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Lo, C., Nguyen, T., Pouget, A., Rapela, J., Reggiani, J., Ryan, T., SWC Foraging Working Group. Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales. (2024) <em>Society for Neuroscience</em>, October 5th, Chicago, U.S..</p>
             </div>
             <div class="item">
-                <p>Li, Z., Rapela, J., Campagner, D., SWC Foraging Working Group, and Sahani, M. Statistical Analysis of Naturalistic Long-Duration Mice Foraging Behaviour. (2024) Shenoy Undergraduate Research Fellowship in Neuroscience (SURFiN) Symposium, April 15th, New York City, U.S..
+                <p>Li, Z., Rapela, J., Campagner, D., SWC Foraging Working Group, and Sahani, M. Statistical Analysis of Naturalistic Long-Duration Mice Foraging Behaviour. (2024) <em>Shenoy Undergraduate Research Fellowship in Neuroscience (SURFiN) Symposium</em>, April 15th, New York City, U.S..
                     <a href="https://drive.google.com/file/d/10LBPxjHKYmA2uRDX7DnwUl2NYRFTQmDQ/view?usp=drive_link" class="pdf-link" target="_blank">[PDF]</a> </p>
             </div>
         </section>
