--- a/project.html
+++ b/project.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zimo Li - Project</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <style>
         body, html {
             height: 100%;
@@ -114,6 +118,35 @@
             text-decoration: none;
             font-size: 1.1rem;
         }
+        .pdf-link {
+            color: #3498db;
+            text-decoration: none;
+            margin-left: 0.5rem;
+        }
+
+        .pdf-link:hover {
+            text-decoration: underline;
+        }
+
+        .code-link {
+            color: #2ecc71;  /* Different color from PDF links */
+            text-decoration: none;
+            margin-left: 0.5rem;
+        }
+
+        .code-link:hover {
+            text-decoration: underline;
+        }
+
+        .people-link {
+            color: #0317cd;  /* Different color from PDF links */
+            text-decoration: none;
+            margin-left: 0.5rem;
+        }
+
+        .people-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -121,7 +154,7 @@
     <div class="menu-hover-zone"></div>
     <nav class="side-menu">
         <ul>
-            <li><a href="index.html">Bio</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="publication.html">Publication</a></li>
             <li><a href="project.html">Project</a></li>
             <li><a href="https://drive.google.com/file/d/1o9m9PxVb2czNB3Pk2XQHj08ePnpiFkZu/view?usp=drive_link">CV</a></li>
